syntax = "proto3";
package misesid.misestm.v1beta1;

option go_package = "github.com/mises-id/mises-tm/x/misestm/types";

import "gogoproto/gogo.proto";

message DidRegistry {
  string creator = 1;
  uint64 id = 2;
  string did = 3; 
  string pkeyDid = 4; 
  string pkeyType = 5; 
  string pkeyMultibase = 6; 
  uint64 version = 7;
}